--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=api
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_eventos_angola
+spring.datasource.username=postgres
+spring.datasource.password=postgres
